fixes for enide.nodejs